@@ -38,8 +38,8 @@ namedb_close (struct namedb *db)
 		if(db->udb)
 			udb_base_close(db->udb);
 		udb_base_free(db->udb);
-		region_destroy(db->region);
 		zonec_desetup_parser();
+		region_destroy(db->region);
 	}
 }
 
