@@ -1,3 +1,8 @@
+11 Jun 2013: Wouter
+	- Fix memory leak in zone parser for txt record (since the large
+	  number of txt subsections fix).
+	- Fix zone parser allocations to be in db region.
+
 5 Jun 2013: Wouter
 	- Fix segfault on repeated reconfigs, double free of zone apex name.
 
